--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -4,4 +4,4 @@ h2  Resultados de <br>aprendizaje
 .card.resultado-item
     .card-body
         h5 Cód. 12150003
-        p.mb-0 Definir variables primordiales en los sistemas de información de la Organización.
+        p.mb-0 Definir variables primordiales en los sistemas de información de la organización.
