--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -10,16 +10,16 @@ include ../mixins/functions
             .card-body
                 .row.my-4
                     .col-12.col-md-5
-                        p Las organizaciones en un contexto comercial, hace relación a un conjunto de personas, recursos y medios organizados de forma intencional y planificada, enfocada a lograr un mismo objetivo, económico o social. Este concepto es muy similar a término empresa, la cual está enfocado específicamente con la rentabilidad y sostenibilidad en un mercado, por ende, la generación de riqueza. 
+                        p Las organizaciones, en un contexto comercial, hacen referencia a un conjunto de personas, recursos y medios organizados de forma intencional y planificada, enfocada a lograr un mismo objetivo, económico o social. Este concepto es muy similar al término empresa, el cual está enfocado específicamente en la rentabilidad y sostenibilidad en un mercado y, por ende, en la generación de riqueza.
 
-                        p.mt-4 Según la Guía de Responsabilidad Social ISO 26000 de ICONTEC, define la organización como una entidad o grupo de personas e instalaciones con responsabilidad, autoridades y relaciones establecidas y objetivos identificables. 
+                        p.mt-4 La Guía de Responsabilidad Social ISO 26000 de ICONTEC, define la organización como una entidad o grupo de personas e instalaciones con responsabilidad, autoridades y relaciones establecidas y objetivos identificables.
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/recursos.svg").img-fluid
 
                 p La gráfica complementa la última definición, ya que esta muestra las relaciones que se establecen entre los recursos, cada uno tiene una responsabilidad dentro de la organización, ya sea proveer un servicio o producto, gestionar la información, transformar una materia prima o generar valor.
                 br
-                p Tanto las organizaciones  como las empresas, tienen una estructura de personas con responsabilidades sobre unas actividades en especial, estas a su vez, componen una serie de procesos que une el esfuerzo humano, técnico y tecnológico para lograr un objetivo específico dentro de un sistema llamado empresa; las cuales en la actualidad, en su gran mayoría  tienen un enfoque basado en procesos, los cuales tienen unas fuentes de entradas, entradas, actividades, salidas y receptores de las salidas, estos últimos tienen como resultado elementos que necesita el siguiente proceso para trabajar o un producto o servicio final.
+                p Tanto las organizaciones como las empresas tienen una estructura de personas con responsabilidades sobre unas actividades específicas. Estas, a su vez, componen una serie de procesos que unen el esfuerzo humano, técnico y tecnológico para lograr un objetivo específico dentro de un sistema llamado empresa que, actualmente en su gran mayoría, tienen un enfoque basado en procesos, los cuales poseen unas fuentes de entradas, actividades, salidas y receptores de las salidas; estos últimos tienen como resultado elementos que necesita el siguiente proceso para trabajar, un producto o servicio final.
 
                 img(src="assets/images/pages/ilustraciones/recursos_mapa.svg").img-fluid.mt-6
 
@@ -27,31 +27,32 @@ include ../mixins/functions
 #centros
 .container
     .header-ecored
-        h1 1.1 Centros de distibución
+        h1 1.1 Centros de distribución
     .header
         .card
             .card-body                
                 .row.my-4
                     .col-12.col-md-5
-                        p Algunas empresas cuentan con Centros de Distribución, los cuales son espacios planificados para ubicar, mantener y manipular mercancías y materiales (Mora, 2011). Las actividades que se desarrollan son diferentes de acuerdo con el tipo de operación; sin embargo, estas se complementan dado que funcionan como un sistema, con entradas, salidas y controles de procesos e información. En esta definición aplican diferentes técnicas y procesos logísticos, los cuales permiten la optimización de los procesos de una organización, disminuyendo costos y tiempos.
+                        p Algunas empresas cuentan con Centros de Distribución, son espacios planificados para ubicar, mantener y manipular mercancías y materiales (Mora, 2011). Las actividades que se desarrollan son diferentes de acuerdo con el tipo de operación; sin embargo, estas se complementan dado que funcionan como un sistema, con entradas, salidas y controles de procesos e información. En esta definición aplican diferentes técnicas y procesos logísticos que permiten la optimización de los procesos de una organización, disminuyendo costos y tiempos.
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/2_1_centros.png").img-fluid
 
         .card
             .card-body
-                p Los Centros de Distribución no funcionan como islas dentro de una organización, es necesaria la interacción permanente con sus diferentes áreas ya que estas con su funcionamiento sistémico logran dar continuidad a la información que ingresa, por ejemplo: un pedido de un cliente puede pasar desde el área de servicio al cliente o de ventas a compras, luego a  producción y por último al proceso de empaque y despachos, manteniendo siempre las especificaciones de la solicitud inicial del cliente,  agregando valor en cada actividad. 
+                p Los Centros de Distribución no funcionan como islas dentro de una organización, es necesaria la interacción permanente con sus diferentes áreas, ya que con su funcionamiento sistémico logran dar continuidad a la información que ingresa, por ejemplo: un pedido de un cliente puede pasar desde el área de servicio al cliente o de ventas a compras, luego a producción y por último, al proceso de empaque y despachos, manteniendo siempre las especificaciones de la solicitud inicial del cliente, agregando valor en cada actividad.
                 br
-                p Ver un centro de distribución como un sistema, permite incluir diferentes actividades y procesos que participan en la operación, tales actividades son: Los procesos de entrada hacen referencia a toda la información que ingresa o algún tipo de recurso que se requiere para que el centro de distribución funcione, en este caso seria los productos o servicios comprados, la información suministrada por lo proveedores y clientes y el resultado de procesos de logística inversa. En cuanto a los procesos internos, significa las actividades de almacenamiento de materias o mercancía, administración optimo del inventario, atención oportuna de los pedidos, facturación, cargue y despacho de lo almacenado. 
+                p Ver un centro de distribución como un sistema, permite incluir diferentes actividades y procesos que participan en la operación, tales actividades son: los procesos de entrada hacen referencia a toda la información que ingresa o algún tipo de recurso que se requiere para que el centro de distribución funcione, en este caso serían los productos o servicios comprados, la información suministrada por lo proveedores y clientes y el resultado de procesos de logística inversa. En cuanto a los procesos internos, significa las actividades de almacenamiento de materias o mercancía, administración optimo del inventario, atención oportuna de los pedidos, facturación, cargue y despacho de lo almacenado.
                 br
-                p Dentro de los procesos de salida, se contempla las acciones de transporte, distribución y entrega eficiente de productos, servicio al cliente y servicio posventa.
+                p Dentro de los procesos de salida, se contemplan las acciones de transporte, distribución y entrega eficiente de productos, servicio al cliente y servicio posventa.
 
                 img(src="assets/images/pages/ilustraciones/2_1_mapa.svg").img-fluid.mt-5.col-12
 
         .card
             .card-body
                 h1.mb-5(style="color: #1465C0") Objetivos de un Centro de Distribución
-                p.mb-3 Los principales objetivos de un Centro de Distribución, están enfocados a la eficiencia y eficacia de la operación, siendo un reto permanente la disminución de sus costos. De forma general se presentan a continuación los objetivos: 
+
+                p.mb-3 Los principales objetivos de un Centro de Distribución están enfocados en la eficiencia y eficacia de la operación, siendo un reto permanente la disminución de sus costos. De forma general se presentan los objetivos a continuación:
 
                 ul
                     li(style="color: #4DD0E0")
@@ -59,11 +60,11 @@ include ../mixins/functions
                     li(style="color: #4DD0E0")
                         p(style="color: #00223D") Entregar los materiales o productos bajo la metodología de justo a tiempo a los clientes finales.
                     li(style="color: #4DD0E0")    
-                        p(style="color: #00223D") Tener control permanente sobre los inventarios de materiales y mercancías.  
+                        p(style="color: #00223D") Tener control permanente sobre los inventarios de materiales y mercancías.
                     li(style="color: #4DD0E0")    
                         p(style="color: #00223D") Desarrollar estrategias de consolidación de mercancía cuando provienen de diferentes plantas o empresas y su destino es un mismo cliente.
                     li(style="color: #4DD0E0")    
-                        p(style="color: #00223D") Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación. 
+                        p(style="color: #00223D") Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación.
 
                 h1(style="color: #4DD0E0").text-center.my-5  El sistema logístico
                 img(src="assets/images/pages/ilustraciones/sistema_logistico.svg").img-fluid.col-12     
@@ -78,7 +79,7 @@ include ../mixins/functions
                     .card(style=" border-color: #94E3EC").mb-0
                         .card-body(style="background-color: #94E3EC")
                             strong Procesos de recepción: 
-                            |es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:
+                            |es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía que se puede recibir de diferentes formas, como se indica a continuación:
 
             .row.justify-content-center.mt-5
 
@@ -96,7 +97,7 @@ include ../mixins/functions
                             .avatar.avatar-xxl.card-avatar
                                 img(src="assets/images/pages/ilustraciones/ico2.svg").avatar-img
                             strong A granel: 
-                            |método utilizado para cierto tipo de mercancía, que por su cantidad y forma, deben ser entregado en empaques individuales, por ejemplo: el arroz, el frijol, azúcar, entre otros. 
+                            |método utilizado para cierto tipo de mercancía que, por su cantidad y forma, deben ser entregados en empaques individuales, por ejemplo: el arroz, el frijol, azúcar, entre otros.
 
                 .col-12.col-md-3.mt-6.my-md-0
                     .card(style="border-color:#C3E7F9")
@@ -117,7 +118,7 @@ include ../mixins/functions
                         .card(style=" border-color: #94E3EC").mb-5
                             .card-body(style="background-color: #94E3EC")
                                 strong Procesos de Almacenamiento: 
-                                |el almacenamiento tiene como fin, proteger y conservar los materiales o mercancía, en condiciones óptimas, durante un determinado espacio de tiempo, es decir con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades.   
+                                |tiene como fin proteger y conservar los materiales o mercancía en condiciones óptimas durante un espacio de tiempo determinado, es decir, con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. 
 
                 
                 .col-12.col-md-5
@@ -127,7 +128,7 @@ include ../mixins/functions
                         .card(style=" border-color: #94E3EC").mb-5
                             .card-body(style="background-color: #94E3EC")
                                     strong Procesos de Salida: 
-                                    |está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. 
+                                    |está compuesto por las actividades al final del flujo dentro del centro, tales como el picking, empaque y embarque.
 
             img.img-a.my-5.py-3(src="assets/images/pages/ilustraciones/actividades_secuenciales.png", style="background-color:white; border-radius:60px").img-fluid.col-11
 
@@ -140,7 +141,7 @@ include ../mixins/functions
             .card-body
                 .row.my-4
                     .col-12.col-md-5
-                        p De acuerdo con lo definido por el diccionario de la Real Academia Española, la palabra estrategia significa: que es un proceso regulable, conjunto de reglas que aseguran una decisión óptima en cada momento, y en el caso de la palabra competitiva, significa: relativo a competencia rivalidad de quienes disputan una misma cosa o la pretenden. Teniendo en cuenta lo anterior, las estrategias competitivas buscan tomar decisiones acertadas en los momentos en que se requiera para lograr algo que se pretenda, lo cual sea el objeto de la estrategia misma, ya sea la participación en un mercado, el aumento de atención a nuevos clientes, la disminución de tiempos de entrega de un producto, la satisfacción de los clientes, entre muchos otros aspectos que son relevantes en una organización.
+                        p Teniendo en cuenta lo anterior, las estrategias competitivas buscan tomar decisiones acertadas en los momentos en que se requiera para lograr algo que se pretenda, puede ser el objeto de la estrategia misma, ya sea la participación en un mercado, el aumento de atención a nuevos clientes, la disminución de tiempos de entrega de un producto, la satisfacción de los clientes, entre muchos otros aspectos que son relevantes en una organización.
 
 
                     .col-12.col-md-6.text-center.ml-3
@@ -150,7 +151,7 @@ include ../mixins/functions
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/estrategias2.svg").img-fluid                
                     .col-12.col-md-4
-                        p.ml-3 Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. 
+                        p.ml-3 Tal como se muestra en la gráfica anterior y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa.
 
         .py-3(style="background-color:#D4F4F7; border-radius:9px")
             .row
