--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -9,7 +9,7 @@ include ../mixins/functions
             .card-body
                 .row.my-4
                     .col-12.col-md-5
-                        p Teniendo en cuenta el dinamismo de los mercados que se mencionaba anteriormente y específicamente las empresas que están inmersas en él, les ingresan y generan gran cantidad de información relacionada con todas las partes interesadas en su actividad, ya sean proveedores, clientes, el gobierno, otras empresas y hasta la misma comunidad o sociedad que se encuentra en su entorno de acción, y cada una de estas, juega un papel importante en  el logro de los objetivos organizacionales, en la rentabilidad y su sostenibilidad, motivo por el cual se debe tratar adecuadamente todas estas entradas y salidas de información. 
+                        p Teniendo en cuenta el dinamismo de los mercados que se mencionaba anteriormente y específicamente las empresas que están inmersas en él, les ingresan y generan gran cantidad de información relacionada con todas las partes interesadas en su actividad, ya sean proveedores, clientes, el gobierno, otras empresas y hasta la misma comunidad o sociedad que se encuentra en su entorno de acción, y cada una de estas juega un papel importante en  el logro de los objetivos organizacionales, en la rentabilidad y su sostenibilidad, motivo por el cual se debe tratar adecuadamente todas estas entradas y salidas de información. 
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/sistemas.svg").img-fluid
@@ -59,7 +59,7 @@ include ../mixins/functions
                                             p(style="font-size: 20px; color: #fff").mb-2.text-center Sistemas de procesamiento de transacciones
                                 #collapseOne.collapse.show(aria-labelledby='headingOne', data-parent='#accordionExample')
                                     .card-body(style="background: #D4F4F7")
-                                        | Los cuales procesar la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. 
+                                        | Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. 
                     
                             .card
                                 #headingTwo.card-header(style="background: #36AFEA")
@@ -126,7 +126,7 @@ include ../mixins/functions
                     .col-12.col-md-5
                         p Cuando estos datos se combinan de tal manera que en conjunto dan una idea elaborada sobre aquel objeto o concepto, entonces decimos que tenemos una información: en el ejemplo anterior, esos datos ordenados y relacionados nos dan la descripción del edificio donde está el apartamento que se quiere comprar (Marco et al., 2013).
 
-                        p En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyo o se mantuvo estable frente a la semana anterior.
+                        p En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyó o se mantuvo estable frente a la semana anterior.
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/conceptos2.png").img-fluid
@@ -136,5 +136,4 @@ include ../mixins/functions
             .col-auto
                 img(src="assets/images/pages/ilustraciones/conceptos3.svg").img-fluid 
             .col-10
-                p.mb-0 Luego del proceso de tomar datos y revisarlos de forma conjunta y ordenada, se obtiene información, esta también puede evolucionar rápidamente, ya que si esta hace referencia a temas desconocidos y útiles, permite tomar decisiones en diferentes niveles de la organización, como operativo, táctico o estratégico;  esto sería generación de conocimiento lo cual sería un gran resultado  para la mejora continua, sostenibilidad y posiblemente el aumento de la competitividad en un mercado, puesto que se puede llegar a tener un factor diferenciador que agreguen valor según las necesidades identificadas.
-                      
+                p.mb-0 Luego del proceso de tomar datos y revisarlos de forma conjunta y ordenada, se obtiene información, esta también puede evolucionar rápidamente, ya que si esta hace referencia a temas desconocidos y útiles, permite tomar decisiones en diferentes niveles de la organización, como operativo, táctico o estratégico;  esto sería generación de conocimiento, un gran resultado para la mejora continua, sostenibilidad y posiblemente el aumento de la competitividad en un mercado, puesto que se puede llegar a tener un factor diferenciador que agregue valor según las necesidades identificadas.
