--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -10,9 +10,9 @@ include ../mixins/functions
             .card-body
                 .row.my-4
                     .col-12.col-md-5
-                        p El procesamiento de datos hace referencia a la manipulación adecuada de los datos, de forma que generen información objetiva y útil a la organización, para su mejora y continua evaluación. De acuerdo a la actividad y al tamaño de las empresas, el volumen de datos varía, así mismo es la forma de captura y registro, estos en la actualidad están soportados por los grandes avances de la tecnología, la cual disminuye las limitaciones de espacio y tiempo, ya que no es necesario estar junto a un equipo de cómputo para registrar los datos efectivamente.
+                        p El procesamiento de datos hace referencia a la manipulación adecuada de los datos, de forma que generen información objetiva y útil a la organización para su mejora y continua evaluación. El volumen de datos varía de acuerdo con la actividad y el tamaño de las empresas, así como la forma de captura y registro. En la actualidad están soportados por los grandes avances de la tecnología, la cual disminuye las limitaciones de espacio y tiempo, ya que no es necesario estar junto a un equipo de cómputo para registrar los datos efectivamente.
                         br
-                        p El procesamiento de datos se da de una forma cíclica, la cual la componen las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.
+                        p El procesamiento de datos se da de una forma cíclica que se compone de las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/procesamiento.png").img-fluid
@@ -24,7 +24,7 @@ include ../mixins/functions
             .card-body
                 .row.my-4
                     .col-12.col-md-5
-                        p En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente, de igual forma pueden estar de forma escrita, por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiar los datos para garantizar su integridad e impedir la manipulación indebida. 
+                        p En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente. De igual manera, pueden estar de forma escrita por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiarlo para garantizar su integridad e impedir la manipulación indebida.
 
                     .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/procesamiento2.png").img-fluid
@@ -144,7 +144,7 @@ include ../mixins/functions
 
                     hr(style="border: 1px solid #8EB5E1")
 
-                    p Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como, el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. 
+                    p Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. 
 
             .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#C3E7F9;")
 
@@ -167,9 +167,6 @@ include ../mixins/functions
     .header  
          .card
             .card-body
-                p El registro de los datos se relaciona con el soporte y su medio (datos consignados), esta acción denomina el seguimiento de un proceso que debe ser sistemático y que debe cumplirse para consignar los datos en un medio, editarlos, codificarlos y clasificarlos.
-                br
-                p Las etapas en la función del registro de datos son los siguientes: 
 
             .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#C3E7F9;")
 
