Corrección Texto PDF e Imagenes final

--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -130,7 +130,7 @@ include ../mixins/functions
                                     strong Procesos de Salida: 
                                     |está compuesto por las actividades al final del flujo dentro del centro, tales como el picking, empaque y embarque.
 
-            img.img-a.my-5.py-3(src="assets/images/pages/ilustraciones/actividades_secuenciales.png", style="background-color:white; border-radius:60px").img-fluid.col-11
+            img.img-a.my-5.py-3(src="assets/images/pages/ilustraciones/actividades_secuenciales.svg", style="background-color:white; border-radius:60px").img-fluid.col-11
 
 #estrategias
 .container
