--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -166,9 +166,8 @@ include ../mixins/functions
         h1 3.2 Preparación de reportes, comunicación y almacenamiento de datos
     .header  
          .card
-            .card-body
 
-            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#C3E7F9;")
+            .row.justify-content-center.align-items-center.mx-3.mt-4(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
