Ajuste de codigo

--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -50,58 +50,58 @@ include ../mixins/functions
 
         .card
             .card-body
-                h1.mb-5(style="color: #1465C0") Objetivos de un Centro de Distribución
+                h1.mb-5.text-color-1 Objetivos de un Centro de Distribución
 
                 p.mb-3 Los principales objetivos de un Centro de Distribución están enfocados en la eficiencia y eficacia de la operación, siendo un reto permanente la disminución de sus costos. De forma general se presentan los objetivos a continuación:
 
                 ul
-                    li(style="color: #4DD0E0")
-                        p(style="color: #00223D") Realizar balanceo entre la producción y demanda de un producto, administrando adecuadamente su inventario.
-                    li(style="color: #4DD0E0")
-                        p(style="color: #00223D") Entregar los materiales o productos bajo la metodología de justo a tiempo a los clientes finales.
-                    li(style="color: #4DD0E0")    
-                        p(style="color: #00223D") Tener control permanente sobre los inventarios de materiales y mercancías.
-                    li(style="color: #4DD0E0")    
-                        p(style="color: #00223D") Desarrollar estrategias de consolidación de mercancía cuando provienen de diferentes plantas o empresas y su destino es un mismo cliente.
-                    li(style="color: #4DD0E0")    
-                        p(style="color: #00223D") Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación.
+                    li.text-blue
+                        p.text-black Realizar balanceo entre la producción y demanda de un producto, administrando adecuadamente su inventario.
+                    li.text-blue
+                        p.text-black Entregar los materiales o productos bajo la metodología de justo a tiempo a los clientes finales.
+                    li.text-blue    
+                        p.text-black Tener control permanente sobre los inventarios de materiales y mercancías.
+                    li.text-blue    
+                        p.text-black Desarrollar estrategias de consolidación de mercancía cuando provienen de diferentes plantas o empresas y su destino es un mismo cliente.
+                    li.text-blue    
+                        p.text-black Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación.
 
-                h1(style="color: #4DD0E0").text-center.my-5  El sistema logístico
+                h1.text-blue.text-center.my-5  El sistema logístico
                 img(src="assets/images/pages/ilustraciones/sistema_logistico.svg").img-fluid.col-12     
 
-        .card(style="background-color:#94E3EC")
+        .card.bg-color-1
             img(src="assets/images/pages/ilustraciones/actividades.png" style= "margin-top: -4px").img-fluid       
             .col-11.col-md-8.mt-5 
                 article.custom-item.d-flex.align-items-center.flex-column.flex-md-row
 
                     img(src="assets/images/pages/ilustraciones/actividades1.svg").custom-item-img.my-2
 
-                    .card(style=" border-color: #94E3EC").mb-0
-                        .card-body(style="background-color: #94E3EC")
+                    .card.bd-color-1.mb-0
+                        .card-body.bg-color-1
                             strong Procesos de recepción: 
                             |es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía que se puede recibir de diferentes formas, como se indica a continuación:
 
             .row.justify-content-center.mt-5
 
                 .col-12.col-md-3.my-6.my-md-0
-                    .card(style="border-color:#C3E7F9")
-                        .card-body.text-center(style="background-color:#C3E7F9")
+                    .card.bd-color-2
+                        .card-body.text-center.bg-color-2
                             .avatar.avatar-xxl.card-avatar
                                 img(src="assets/images/pages/ilustraciones/ico1.svg").avatar-img
                             strong Paletizado: 
                             |hace referencia a la ubicación de la mercancía sobre estibas de madera o plástico, previo embalaje, el cual es realizado por el proveedor. 
 
                 .col-12.col-md-3.my-6.my-md-0
-                    .card(style="border-color:#C3E7F9")
-                        .card-body.text-center(style="background-color:#C3E7F9")
+                    .card.bd-color-2
+                        .card-body.text-center.bg-color-2
                             .avatar.avatar-xxl.card-avatar
                                 img(src="assets/images/pages/ilustraciones/ico2.svg").avatar-img
                             strong A granel: 
                             |método utilizado para cierto tipo de mercancía que, por su cantidad y forma, deben ser entregados en empaques individuales, por ejemplo: el arroz, el frijol, azúcar, entre otros.
 
                 .col-12.col-md-3.mt-6.my-md-0
-                    .card(style="border-color:#C3E7F9")
-                        .card-body.text-center(style="background-color:#C3E7F9")
+                    .card.bd-color-2
+                        .card-body.text-center.bg-color-2
                             .avatar.avatar-xxl.card-avatar
                                 img(src="assets/images/pages/ilustraciones/ico3.svg").avatar-img
                             strong En arrume: 
@@ -115,8 +115,8 @@ include ../mixins/functions
                     article.d-flex.align-items-center.flex-column.flex-md-row
 
                         img(src="assets/images/pages/ilustraciones/actividades2.svg").custom-item-img.my-2
-                        .card(style=" border-color: #94E3EC").mb-5
-                            .card-body(style="background-color: #94E3EC")
+                        .card.bd-color-1.mb-5
+                            .card-body.bg-color-1
                                 strong Procesos de Almacenamiento: 
                                 |tiene como fin proteger y conservar los materiales o mercancía en condiciones óptimas durante un espacio de tiempo determinado, es decir, con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. 
 
@@ -125,8 +125,8 @@ include ../mixins/functions
                     article.custom-item.d-flex.align-items-center.flex-column.flex-md-row
 
                         img(src="assets/images/pages/ilustraciones/actividades3.svg").custom-item-img.my-2
-                        .card(style=" border-color: #94E3EC").mb-5
-                            .card-body(style="background-color: #94E3EC")
+                        .card.bd-color-1.mb-5
+                            .card-body.bg-color-1
                                     strong Procesos de Salida: 
                                     |está compuesto por las actividades al final del flujo dentro del centro, tales como el picking, empaque y embarque.
 
@@ -153,7 +153,7 @@ include ../mixins/functions
                     .col-12.col-md-4
                         p.ml-3 Tal como se muestra en la gráfica anterior y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa.
 
-        .py-3(style="background-color:#D4F4F7; border-radius:9px")
+        .py-3.bg-color-3
             .row
                 .col-1.col-md-1.text-center(style="display: flex; justify-content: initial; flex-direction: column;")
                      img(src="assets/images/pages/ilustraciones/comilla1.svg").img-fluid.ml-5
