--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -19,22 +19,22 @@ include ../mixins/functions
                         p Considerando que la empresa se comporta como un sistema, que se denominará sistema de información, y realizando una subdivisión más precisa en sus componentes, se puede considerar que el sistema de información es un trinomio constituido por (Díaz, 2013): 
                         br
                         ul
-                            li(style="color: #4DD0E0")
-                                p(style="color: #00223D") Una estructura de decisión.
-                            li(style="color: #4DD0E0")
-                                p(style="color: #00223D") Una actividad transformadora y operante, concretada en un conjunto de reglas de gestión. 
-                            li(style="color: #4DD0E0")    
-                                p(style="color: #00223D") Un conjunto de informaciones.     
+                            li.text-blue
+                                p.text-black Una estructura de decisión.
+                            li.text-blue
+                                p.text-black Una actividad transformadora y operante, concretada en un conjunto de reglas de gestión. 
+                            li.text-blue    
+                                p.text-black Un conjunto de informaciones.     
                     .col-12.col-md-6.text-center
                         img(src="assets/images/pages/ilustraciones/sistemas2.png").img-fluid   
 
-        .py-3(style="background-color:#D4F4F7; border-radius:9px")
+        .py-3.bg-color-3
             .row
-                .col-1.col-md-1.text-center
+                .col-auto.col-md-1.text-center
                      img(src="assets/images/pages/ilustraciones/comilla1.svg").img-fluid.ml-5
                 .col-10.col-md-10
                     p.mb-0.ml-4 Dicho sistema recibe unos estímulos concretados en solicitudes y utilizando el conjunto de las informaciones patrimonio del sistema, según indican sus reglas de gestión, elabora unos resultados que son enviados al exterior (Díaz, 2013).                   
-                .col-1.col-md-1.text-center
+                .col-auto.col-md-1.text-center
                     img(src="assets/images/pages/ilustraciones/comilla2.svg").img-fluid.mt-4.mr-5                   
 
 
@@ -53,55 +53,55 @@ include ../mixins/functions
                                 
                         #accordionExample.accordion.mt-5
                             .card
-                                #headingOne.card-header(style="background: #36AFEA")
-                                    p(style="margin-top: 1rem")
+                                #headingOne.card-header.bg-color-4
+                                    p.mt-3
                                         button.btn.btn-link(type='button', data-toggle='collapse', data-target='#collapseOne', aria-expanded='true', aria-controls='collapseOne')
-                                            p(style="font-size: 20px; color: #fff").mb-2.text-center Sistemas de procesamiento de transacciones
+                                            p.text-2.mb-2.text-center Sistemas de procesamiento de transacciones
                                 #collapseOne.collapse.show(aria-labelledby='headingOne', data-parent='#accordionExample')
-                                    .card-body(style="background: #D4F4F7")
+                                    .card-body.bg-color-5
                                         | Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. 
                     
                             .card
-                                #headingTwo.card-header(style="background: #36AFEA")
-                                    p(style="margin-top: 1rem")
+                                #headingTwo.card-header.bg-color-4
+                                    p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseTwo', aria-expanded='false', aria-controls='collapseTwo')
                                             p(style="font-size: 20px; color: #fff").mb-2.text-center Sistema de control de procesos de negocio
                                 #collapseTwo.collapse(aria-labelledby='headingTwo', data-parent='#accordionExample')
-                                    .card-body(style="background: #D4F4F7")
+                                    .card-body.bg-color-5
                                         | Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. 
                             
                             .card
-                                #headingThree.card-header(style="background: #36AFEA")
-                                    p(style="margin-top: 1rem")
+                                #headingThree.card-header.bg-color-4
+                                    p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseThree', aria-expanded='false', aria-controls='collapseThree')
                                             p(style="font-size: 20px; color: #fff").mb-2.text-center Sistemas de colaboración empresarial
                                 #collapseThree.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
-                                    .card-body(style="background: #D4F4F7")
+                                    .card-body.bg-color-5
                                         | Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. 
 
                             .card
-                                #headingFour.card-header(style="background: #36AFEA")
-                                    p(style="margin-top: 1rem")
+                                #headingFour.card-header.bg-color-4
+                                    p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseFour', aria-expanded='false', aria-controls='collapseThree')
                                             p(style="font-size: 20px; color: #fff").mb-2.text-center Sistemas de información de gestión
                                 #collapseFour.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
-                                    .card-body(style="background: #D4F4F7")
+                                    .card-body.bg-color-5
                                         | Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. 
                             .card
-                                #headingFive.card-header(style="background: #36AFEA")
-                                    p(style="margin-top: 1rem")
+                                #headingFive.card-header.bg-color-4
+                                    p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseFive', aria-expanded='false', aria-controls='collapseThree')
                                             p(style="font-size: 20px; color: #fff").mb-2.text-center Sistema de apoyo a la toma de decisiones
                                 #collapseFive.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
-                                    .card-body(style="background: #D4F4F7")
+                                    .card-body.bg-color-5
                                         | Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.
                             .card
-                                #headingSix.card-header(style="background: #36AFEA")
-                                    p(style="margin-top: 1rem")
+                                #headingSix.card-header.bg-color-4
+                                    p.mt-3
                                         button.btn.btn-link.collapsed(type='button', data-toggle='collapse', data-target='#collapseSix', aria-expanded='false', aria-controls='collapseThree')
                                             p(style="font-size: 20px; color: #fff").mb-2.text-center Sistema de información ejecutiva
                                 #collapseSix.collapse(aria-labelledby='headingThree', data-parent='#accordionExample')
-                                    .card-body(style="background: #D4F4F7")
+                                    .card-body.bg-color-5
                                         | El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. 
 #conceptos
 .container
