--- a/source/assets/scss/pages/_custom.scss
+++ b/source/assets/scss/pages/_custom.scss
@@ -1,9 +1,15 @@
 .bg-color-naranja {
     background-color: orange;
 }
-
-
-// Estilos tema 2
+.text-white{
+    color: white;
+}
+.text-black{
+    color:black;
+}
+.text-blue{
+    color: #4DD0E0
+} 
 
 .custom-item-img {
     flex: 0 0 120px;
@@ -14,4 +20,66 @@
 .img-a {
     display:block;
     margin:auto;
+}
+
+// Estilos tema 1
+
+.text-color-1{
+    color: #1465C0;
+}
+
+.bg-color-1{
+    background-color:#94E3EC;
+}
+
+.bg-color-2{
+    background-color:#C3E7F9;
+}
+
+.bd-color-2{
+    border-color:#C3E7F9;
+}
+
+.bd-color-1{
+    border-color: #94E3EC;
+}
+
+.bg-color-3{
+    background-color:#D4F4F7;
+    border-radius:9px;
+}
+
+// Estilos tema 2
+
+.bg-color-4{
+    background-color: #36AFEA;
+}
+
+.bg-color-5{
+    background-color:#D4F4F7;
+}
+
+.text-2{
+    font-size: 20px;
+    color:white;
+}
+
+// Estilos tema 3
+
+.registro{
+    border-radius: 10px;
+    background-color:#C3E7F9;
+}
+
+.img-t{
+    width: 60%;;
+}
+
+.card-text-1{
+    background-color:#DCF1FB;
+    border-radius: 0px 10px 10px 0px;
+}
+
+.bd-hr{
+    border: 1px solid #8EB5E1;
 }
